{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 70,
  "lineage": "181b2c9c-1a99-4382-070f-c54d8c71b98d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069be11a330abe15b",
            "arn": "arn:aws:ec2:us-west-2:179372911958:instance/i-049599b7eaf388e75",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049599b7eaf388e75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "poc-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b10d68cae04f6f77",
            "private_dns": "ip-172-16-0-124.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.124",
            "public_dns": "ec2-35-90-215-157.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.215.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:179372911958:key/c240ae6e-5f51-4803-9d2d-c0a39c14c56a",
                "throughput": 0,
                "volume_id": "vol-0bd7d5638c3187311",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-078c61483ff3b0573"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0541214607507f0d2",
            "tags": {
              "Name": "node0"
            },
            "tags_all": {
              "Name": "node0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078c61483ff3b0573"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.poc-ec2-keypair",
            "module.ec2.data.aws_ssm_parameter.ami",
            "module.vpc.aws_security_group.sg-vpc-poc",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.http.my_public_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069be11a330abe15b",
            "arn": "arn:aws:ec2:us-west-2:179372911958:instance/i-0d6f8367f7a987c48",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6f8367f7a987c48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "poc-ec2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043848ae68f0d9279",
            "private_dns": "ip-172-16-1-195.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.195",
            "public_dns": "ec2-35-165-130-42.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.130.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:179372911958:key/c240ae6e-5f51-4803-9d2d-c0a39c14c56a",
                "throughput": 0,
                "volume_id": "vol-0d501d2106ddedc17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-078c61483ff3b0573"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04192c88429e62a8d",
            "tags": {
              "Name": "node1"
            },
            "tags_all": {
              "Name": "node1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078c61483ff3b0573"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.poc-ec2-keypair",
            "module.ec2.data.aws_ssm_parameter.ami",
            "module.vpc.aws_security_group.sg-vpc-poc",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:internet-gateway/igw-00c3571cb6d71240f",
            "id": "igw-00c3571cb6d71240f",
            "owner_id": "179372911958",
            "tags": {
              "Name": "vpc-poc-tag"
            },
            "tags_all": {
              "Name": "vpc-poc-tag"
            },
            "vpc_id": "vpc-02770b2033c59d1bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-poc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "poc-route-table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:route-table/rtb-09d5eac83a3c0229c",
            "id": "rtb-09d5eac83a3c0229c",
            "owner_id": "179372911958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c3571cb6d71240f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-poc-tag"
            },
            "tags_all": {
              "Name": "vpc-poc-tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-02770b2033c59d1bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-igw",
            "module.vpc.aws_vpc.vpc-poc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "poc-route-table-association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b4fee5299fcac60",
            "route_table_id": "rtb-09d5eac83a3c0229c",
            "subnet_id": "subnet-0541214607507f0d2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-igw",
            "module.vpc.aws_route_table.poc-route-table",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca559020d424ec0b",
            "route_table_id": "rtb-09d5eac83a3c0229c",
            "subnet_id": "subnet-04192c88429e62a8d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-igw",
            "module.vpc.aws_route_table.poc-route-table",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-vpc-poc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:security-group/sg-078c61483ff3b0573",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078c61483ff3b0573",
            "ingress": [
              {
                "cidr_blocks": [
                  "116.236.68.227/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-tag-sg",
            "name_prefix": "",
            "owner_id": "179372911958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "var.project_name"
            },
            "tags_all": {
              "Name": "var.project_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-02770b2033c59d1bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:subnet/subnet-0541214607507f0d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541214607507f0d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179372911958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-0"
            },
            "tags_all": {
              "Name": "subnet-0"
            },
            "vpc_id": "vpc-02770b2033c59d1bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:subnet/subnet-04192c88429e62a8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04192c88429e62a8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179372911958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-02770b2033c59d1bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-poc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-poc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:179372911958:vpc/vpc-02770b2033c59d1bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-077b514dbfe0cd2e4",
            "default_route_table_id": "rtb-0eb304a72ab130766",
            "default_security_group_id": "sg-0ad868a783d0e7ccf",
            "dhcp_options_id": "dopt-9117c5e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02770b2033c59d1bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb304a72ab130766",
            "owner_id": "179372911958",
            "tags": {
              "Name": "vpc-poc-tag"
            },
            "tags_all": {
              "Name": "vpc-poc-tag"
            }
          }
        }
      ]
    }
  ]
}